@@ -1,4 +1,12 @@
 ====================
+2018/4/7
+v 5-0.42
+
+- Changed Opcode::ConditionalGoto case in Engine::operate() to return an error instead of treating it as false.
+- Bumped up COPPER_LANG_VERSION to 2.2 to reflect change in if-statements.
+
+
+====================
 2018/3/13 - 2018/3/14
 v 5-0.41
 
